--- a/styles/partials/_button.scss
+++ b/styles/partials/_button.scss
@@ -4,10 +4,20 @@ button{
     border: none;
     color: white;
     text-transform: capitalize;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-style: $sans-text;
+    border: 2px solid transparent;
+    transition: all 0.5 ease;
     i{
         color: white;
+    }
+    &:hover{
+        background: rgba(250,250,250,0.6);
+        border: 2px solid $primary;
+        color: $primary;
+    }
+    &:hover i{
+        color: $primary;
     }
 }
 .transparent{
