--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -38,7 +38,7 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    flex-basis: 40%;
+    flex-basis: 35%;
     .company-info-img{
         margin-right: 20px;
     }
@@ -49,8 +49,34 @@ footer{
     form{
         display: flex;
         flex-direction: column;
+        width: 100%;
         label{
             color: $primary;
+        }
+    }
+    .news-subscribe{
+        position: relative;
+        @extend .flex;
+        input{
+            padding: 15px;
+            background: $dark-accent;
+            border: none;
+            width: 95%;
+            margin-top: 30px;
+        }
+        input:focus{
+            color: white;
+            border: 1px solid $primary;
+        }
+        button{
+            border-radius: 10px;
+            padding: 15px 35px;
+            position: absolute;
+            right: 0;
+            bottom:0;
+        }
+        button:hover{
+            background: $dark-accent;
         }
     }
 }
