--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -8,6 +8,9 @@
 .contact-info{
     @extend .flex;
     flex-basis: 35%;
+    @media (max-width: 940px) {
+        flex-basis: 45%;
+    }
     .contact-info-phone,
     .contact-info-mail{
         @extend .flex;
@@ -15,10 +18,25 @@
     }
     .contact-info-phone{
         flex-basis: 35%;
+        /* Portrait tablet and small desktops */
+        @media (max-width: 940px) {
+            flex-basis: 38%;
+        }
+
+        /* Landscape phone to portrait tablet */
+        @media (max-width: 768px) {
+        }
+
+        /* Landscape phones and down */
+        @media (max-width: 480px) {
+        }
     }
     .contact-info-img{
         flex-basis: 23%;
         margin-right: 10px;
+        @media (max-width: 940px) {
+            flex-basis: 20%;
+        }
     }
 }
 .accounts{
@@ -64,6 +82,9 @@ select{
         @extend .flex;
         align-items: flex-start;
         flex-basis: 40%;
+        @media (max-width: 940px) {
+            flex-basis: 43%;
+        }
         .company-info-office,
         .company-info-open{
             @extend .flex;
@@ -76,13 +97,18 @@ select{
         border: 2px solid $primary;
         align-self: center;
         color: $primary;
+        @media (max-width: 940px) {
+            margin-right: 10px;
+        }
     }
 }
 .page-nav{
+    @media (max-width: 940px) {
+       background: $primary;
+    }
     .wrapper{
         @extend .flex;
         background: $primary;
-        padding: 10px 0;
     }
     ul{
         @extend .flex;
@@ -92,12 +118,17 @@ select{
         }
     }
     .page-nav-menu{
-        flex-basis: 65%;
+        padding: 10px;
+        flex-basis: 70%;
     }
     .page-nav-icons{
+        padding: 10px 0;
         flex-basis: 10%;
+        height: 100%;
+        border-right: 1px solid white;
     }
     .page-nav-social{
+        padding: 10px 0;
         flex-basis: 15%;
     }
 }
@@ -111,8 +142,15 @@ select{
     flex-direction: column;
     justify-content: center;
     align-items: center; 
+    @media (max-width: 940px) {
+        background-size: contain;
+        height: 410px;
+    } 
     .banner-content{
         width: 70%;
+        @media (max-width: 940px) {
+        margin:0 auto;
+        } 
     }
     .banner-nav{
         @extend .flex;
@@ -135,28 +173,4 @@ select{
             color: $primary;
         }
     }
-    // .wrapper::before{
-    //     content: "<";
-    //     display: block;
-    //     text-align: center;
-    //     position: absolute;
-    //     width: 50px;
-    //     height: 50px;
-    //     color: black;
-    //     background: rgba(255,255,255,0.4);
-    //     border-radius: 90px;
-    //     // left: 50px;
-    // }
-    // .wrapper::after{
-    //     content: ">";
-    //     display: block;
-    //     text-align: center;
-    //     position: absolute;
-    //     width: 50px;
-    //     height: 50px;
-    //     color: black;
-    //     background: rgba(255,255,255,0.4);
-    //     border-radius: 90px;
-    //     // left: 50px;
-    // }
 }
