--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .flex, .top-nav .wrapper, .contact-info, .contact-info .contact-info-phone,
 .contact-info .contact-info-mail, .accounts, .accounts .translate, .accounts .account-items, .company-info .wrapper, .company-info .company-info-logo, .company-info .company-info-item, .company-info .company-info-item .company-info-office,
-.company-info .company-info-item .company-info-open, .page-nav .wrapper, .page-nav ul, .page-nav ul li, .banner .banner-nav, .banner .banner-nav .arrow, .half, .about-us .about-us-stuff, .rational .rational-script, .rational .rationals, .rational .rationals .rational-title, .credentials .outer-wrapper, .projects .projects-detail, .statement .wrapper, .news .news-details, .partners .wrapper, footer .wrapper, .footer-contact .foot-contact-info, .footer-contact .foot-email, .footer-contact .foot-phone, .footer-contact .foot-office, .footer-co-info .footer-logo {
+.company-info .company-info-item .company-info-open, .page-nav .wrapper, .page-nav ul, .page-nav ul li, .banner .banner-nav, .banner .banner-nav .arrow, .half, .about-us .about-us-stuff, .rational .rational-script, .rational .rationals, .rational .rationals .rational-title, .credentials .outer-wrapper, .projects .projects-detail, .statement .wrapper, .news .news-details, .partners .wrapper, footer .wrapper, .footer-contact .foot-contact-info, .footer-contact .foot-email, .footer-contact .foot-phone, .footer-contact .foot-office, .footer-co-info .footer-logo, .footer-co-info .news-subscribe {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,7 +166,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   box-sizing: border-box; }
 
 * {
-  color: #272626;
+  color: rgba(39, 39, 39, 0.7);
   font-size: 10px; }
 
 h1, h2, h3, h4, h5, h6, p {
@@ -217,8 +217,8 @@ h6 {
   text-transform: capitalize;
   position: absolute;
   color: #f6f3f3;
+  text-align: center;
   top: -91px;
-  left: 500px;
   z-index: -1; }
 
 p {
@@ -231,12 +231,19 @@ p {
 .contact-info a {
   font-size: 1.4rem; }
 
+.contact-info a:hover {
+  color: #2f87fd; }
+
+.translate {
+  font-size: 1.4rem; }
+
 .account-items {
   text-transform: capitalize; }
-  .account-items li {
-    font-size: 1.8rem; }
-  .account-items .selected {
-    border-bottom: 1px solid #272626; }
+  .account-items a {
+    font-size: 1.4rem; }
+  .account-items a:hover {
+    color: #2f87fd;
+    border-bottom: 2px solid #2f87fd; }
 
 .company-info .company-info-info {
   position: relative; }
@@ -255,17 +262,25 @@ p {
     text-transform: capitalize; }
 
 .page-nav {
-  text-transform: uppercase;
-  font-size: 1.8rem; }
+  text-transform: uppercase; }
   .page-nav .page-nav-menu li:nth-of-type(7) {
     text-transform: capitalize; }
+  .page-nav li a {
+    font-size: 1.6rem; }
+    @media (max-width: 940px) {
+      .page-nav li a {
+        font-size: 1.4rem; } }
   .page-nav .page-nav-menu a,
-  .page-nav .page-nav-social a {
+  .page-nav .page-nav-icons i,
+  .page-nav .page-nav-social i {
     color: white; }
 
 .banner-content p {
   color: white;
   margin: 40px 0 60px 0; }
+  @media (max-width: 940px) {
+    .banner-content p {
+      margin-bottom: 30px; } }
 
 .banner-nav .arrow i {
   font-size: 3rem;
@@ -273,17 +288,27 @@ p {
 
 .about-us h3 {
   color: #2f87fd; }
+  @media (max-width: 940px) {
+    .about-us h3 {
+      text-align: center;
+      margin-left: 142px; } }
 
 .about-us .co-description h2 {
   text-transform: none;
   margin-bottom: 20px; }
+  @media (max-width: 940px) {
+    .about-us .co-description h2 {
+      text-align: right; } }
 
 .about-us .co-description p {
   margin: 20px 0;
   line-height: 36px; }
+  @media (max-width: 940px) {
+    .about-us .co-description p {
+      text-align: right; } }
 
 .about-us .free-consult h3 {
-  color: #272626;
+  color: rgba(39, 39, 39, 0.7);
   margin: 10px 0 60px 0; }
 
 .rational .rationals-content h2 {
@@ -294,13 +319,14 @@ p {
   display: inline-block;
   width: 80px;
   position: absolute;
-  top: 100px;
   left: 0;
+  bottom: -77%;
   border-bottom: 2px solid #2f87fd; }
 
 .rational .rationals-content h5 {
   font-family: Poppins;
   font-size: 1.8rem;
+  text-transform: none;
   font-weight: 500;
   color: #2f87fd;
   margin: 100px 0 35px 0; }
@@ -326,16 +352,19 @@ p {
   .news-title h2 {
     color: #2f87fd;
     position: relative; }
-    .services-title h2:after,
-    .projects-title h2:after,
-    .news-title h2:after {
-      content: "";
-      display: inline-block;
-      width: 60px;
-      position: absolute;
-      top: 62px;
-      left: 152px;
-      border-bottom: 2px solid #2f87fd; }
+  .services-title h2:after,
+  .projects-title h2:after,
+  .news-title h2:after {
+    content: "";
+    display: inline-block;
+    width: 60px;
+    position: absolute;
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
+    transform: translateX(50%);
+    bottom: -46%;
+    right: 50%;
+    border-bottom: 2px solid #2f87fd; }
   .services-title h2, .services-title h3,
   .projects-title h2,
   .projects-title h3,
@@ -346,8 +375,37 @@ p {
     width: 33.33%; }
 
 .vp-statement p, .vp-statement h4 {
-  text-align: center;
-  color: white; }
+  color: white;
+  display: inline-block; }
+
+.vp-statement p:first-of-type {
+  margin-bottom: 100px;
+  font-size: 2.1rem;
+  font-family: Poppins;
+  font-weight: 400;
+  text-align: left;
+  text-transform: capitalize;
+  text-align: center; }
+  @media (max-width: 940px) {
+    .vp-statement p:first-of-type {
+      font-size: 1.6rem; } }
+
+.vp-statement p:last-of-type {
+  text-transform: capitalize; }
+
+.vp-statement h4 {
+  position: relative; }
+
+.vp-statement h4::after {
+  content: "";
+  display: block;
+  width: 60px;
+  border: 1px solid white;
+  position: absolute;
+  -webkit-transform: translateX(50%);
+  -ms-transform: translateX(50%);
+  transform: translateX(50%);
+  top: -141%; }
 
 .news .news-details h3 {
   font-size: 2rem;
@@ -378,6 +436,10 @@ p {
 
 .news .news-content p:last-of-type {
   color: #2f87fd; }
+
+@media (max-width: 940px) {
+  .news .news-content h3, .news .news-content p {
+    font-size: 1.4rem; } }
 
 .footer-contact a {
   color: white;
@@ -412,6 +474,16 @@ p {
 .footer-co-info .company-vision p {
   color: #747474; }
 
+.footer-co-info form {
+  margin-top: 100px; }
+
+.footer-co-info form label {
+  font-size: 1.4rem; }
+
+.footer-co-info form input {
+  color: #747474;
+  font-size: 1.4rem; }
+
 .quick-links h3 {
   font-size: 1.8rem;
   font-family: Source Sans Pro;
@@ -433,6 +505,9 @@ p {
   letter-spacing: 0.4px;
   color: #747474;
   text-transform: capitalize; }
+  @media (max-width: 940px) {
+    .quick-links a {
+      font-size: 1.2rem; } }
 
 .quick-links a:hover {
   color: #2f87fd; }
@@ -456,6 +531,9 @@ p {
   -webkit-transition: all 0.5s;
   -o-transition: all 0.5s;
   transition: all 0.5s; }
+  @media (max-width: 940px) {
+    .latest-news .link-news p, .latest-news .link-news a {
+      font-size: 1.2rem; } }
 
 .latest-news .link-news a:hover {
   color: #2f87fd; }
@@ -467,6 +545,10 @@ p {
 .contact-info {
   -ms-flex-preferred-size: 35%;
   flex-basis: 35%; }
+  @media (max-width: 940px) {
+    .contact-info {
+      -ms-flex-preferred-size: 45%;
+      flex-basis: 45%; } }
   .contact-info .contact-info-phone,
   .contact-info .contact-info-mail {
     -webkit-box-align: center;
@@ -474,11 +556,22 @@ p {
     align-items: center; }
   .contact-info .contact-info-phone {
     -ms-flex-preferred-size: 35%;
-    flex-basis: 35%; }
+    flex-basis: 35%;
+    /* Portrait tablet and small desktops */
+    /* Landscape phone to portrait tablet */
+    /* Landscape phones and down */ }
+    @media (max-width: 940px) {
+      .contact-info .contact-info-phone {
+        -ms-flex-preferred-size: 38%;
+        flex-basis: 38%; } }
   .contact-info .contact-info-img {
     -ms-flex-preferred-size: 23%;
     flex-basis: 23%;
     margin-right: 10px; }
+    @media (max-width: 940px) {
+      .contact-info .contact-info-img {
+        -ms-flex-preferred-size: 20%;
+        flex-basis: 20%; } }
 
 .accounts {
   -ms-flex-preferred-size: 40%;
@@ -521,6 +614,10 @@ select {
     align-items: flex-start;
     -ms-flex-preferred-size: 40%;
     flex-basis: 40%; }
+    @media (max-width: 940px) {
+      .company-info .company-info-item {
+        -ms-flex-preferred-size: 43%;
+        flex-basis: 43%; } }
     .company-info .company-info-item .company-info-office,
     .company-info .company-info-item .company-info-open {
       -webkit-box-align: start;
@@ -533,24 +630,35 @@ select {
     -ms-flex-item-align: center;
     align-self: center;
     color: #2f87fd; }
+    @media (max-width: 940px) {
+      .company-info button {
+        margin-right: 10px; } }
+
+@media (max-width: 940px) {
+  .page-nav {
+    background: #2f87fd; } }
 
 .page-nav .wrapper {
-  background: #2f87fd;
-  padding: 10px 0; }
+  background: #2f87fd; }
 
 .page-nav ul {
   -ms-flex-pack: distribute;
   justify-content: space-around; }
 
 .page-nav .page-nav-menu {
-  -ms-flex-preferred-size: 65%;
-  flex-basis: 65%; }
+  padding: 10px;
+  -ms-flex-preferred-size: 70%;
+  flex-basis: 70%; }
 
 .page-nav .page-nav-icons {
+  padding: 10px 0;
   -ms-flex-preferred-size: 10%;
-  flex-basis: 10%; }
+  flex-basis: 10%;
+  height: 100%;
+  border-right: 1px solid white; }
 
 .page-nav .page-nav-social {
+  padding: 10px 0;
   -ms-flex-preferred-size: 15%;
   flex-basis: 15%; }
 
@@ -576,8 +684,15 @@ select {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+  @media (max-width: 940px) {
+    .banner {
+      background-size: contain;
+      height: 410px; } }
   .banner .banner-content {
     width: 70%; }
+    @media (max-width: 940px) {
+      .banner .banner-content {
+        margin: 0 auto; } }
   .banner .banner-nav {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
@@ -625,6 +740,10 @@ select {
   margin: 50px 0;
   background: url(../images/icons/Ellipse-left.png) no-repeat;
   background-size: 157px; }
+  @media (max-width: 940px) {
+    .about-us {
+      background-size: 120px;
+      background-position: top left; } }
   .about-us h3 {
     margin-bottom: 25px; }
   .about-us .about-us-stuff {
@@ -634,8 +753,11 @@ select {
   .about-us .co-description {
     -ms-flex-preferred-size: 62%;
     flex-basis: 62%; }
-    .about-us .co-description button {
-      margin-top: 100px; }
+  .about-us .co-description button {
+    margin-top: 100px; }
+    @media (max-width: 940px) {
+      .about-us .co-description button {
+        margin-top: 92px; } }
   .about-us .free-consult {
     background: #f5f5f5;
     border-right: 1px solid transparent;
@@ -643,6 +765,10 @@ select {
     flex-basis: 25%;
     padding: 30px;
     position: relative; }
+    @media (max-width: 940px) {
+      .about-us .free-consult {
+        -ms-flex-preferred-size: 30%;
+        flex-basis: 30%; } }
     .about-us .free-consult p {
       margin-bottom: 10px; }
     .about-us .free-consult button {
@@ -716,12 +842,23 @@ select {
     -ms-flex-align: start;
     align-items: flex-start;
     margin-bottom: 50px; }
-    .rational .rational-script .rationals-content {
-      -ms-flex-preferred-size: 50%;
-      flex-basis: 50%; }
-    .rational .rational-script .rationals-image {
-      -ms-flex-preferred-size: 45%;
-      flex-basis: 45%; }
+    @media (max-width: 940px) {
+      .rational .rational-script {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+        flex-direction: column-reverse;
+        -ms-flex-line-pack: start;
+        align-content: flex-start; } }
+  .rational .rationals-content {
+    -ms-flex-preferred-size: 50%;
+    flex-basis: 50%; }
+  .rational .rational-image {
+    -ms-flex-preferred-size: 45%;
+    flex-basis: 45%; }
   .rational .rationals .third {
     border: 1px solid #f5f5f5;
     padding: 30px;
@@ -772,6 +909,10 @@ select {
     position: relative; }
   .projects .projects-detail {
     margin: 30px 0; }
+  @media (max-width: 940px) {
+    .projects .projects-detail p {
+      -ms-flex-preferred-size: 80%;
+      flex-basis: 80%; } }
 
 .statement {
   background: #2f87fd;
@@ -780,6 +921,19 @@ select {
     -ms-flex-preferred-size: 35%;
     flex-basis: 35%; }
   .statement .wrapper .vp-statement {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -ms-flex-preferred-size: 60%;
     flex-basis: 60%; }
 
@@ -834,8 +988,8 @@ footer {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
-  -ms-flex-preferred-size: 40%;
-  flex-basis: 40%; }
+  -ms-flex-preferred-size: 35%;
+  flex-basis: 35%; }
   .footer-co-info .company-info-img {
     margin-right: 20px; }
   .footer-co-info .footer-logo {
@@ -847,9 +1001,29 @@ footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
-    flex-direction: column; }
+    flex-direction: column;
+    width: 100%; }
     .footer-co-info form label {
       color: #2f87fd; }
+  .footer-co-info .news-subscribe {
+    position: relative; }
+    .footer-co-info .news-subscribe input {
+      padding: 15px;
+      background: #313030;
+      border: none;
+      width: 95%;
+      margin-top: 30px; }
+    .footer-co-info .news-subscribe input:focus {
+      color: white;
+      border: 1px solid #2f87fd; }
+    .footer-co-info .news-subscribe button {
+      border-radius: 10px;
+      padding: 15px 35px;
+      position: absolute;
+      right: 0;
+      bottom: 0; }
+    .footer-co-info .news-subscribe button:hover {
+      background: #313030; }
 
 .quick-links {
   -ms-flex-preferred-size: 20%;
@@ -883,10 +1057,20 @@ button {
   border: none;
   color: white;
   text-transform: capitalize;
-  font-size: 1.6rem;
-  font-style: Source Sans Pro; }
+  font-size: 1.4rem;
+  font-style: Source Sans Pro;
+  border: 2px solid transparent;
+  -webkit-transition: all 0.5 ease;
+  -o-transition: all 0.5 ease;
+  transition: all 0.5 ease; }
   button i {
     color: white; }
+  button:hover {
+    background: rgba(250, 250, 250, 0.6);
+    border: 2px solid #2f87fd;
+    color: #2f87fd; }
+  button:hover i {
+    color: #2f87fd; }
 
 .transparent, .about-us .free-consult button, .news .news-details button, .latest-news button {
   background: none;
@@ -904,6 +1088,9 @@ img {
 .wrapper {
   max-width: 1170px;
   margin: 0 auto; }
+  @media (max-width: 940px) {
+    .wrapper {
+      width: 96%; } }
 
 ul {
   padding: 0;
@@ -913,7 +1100,10 @@ ul {
     padding: 0; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s; }
 
 img {
   display: inline-block; }
