--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,7 +7,7 @@ $medium-accent:#424141;//Mid Grey
 $bg-color: #f5f5f5; //Offwhite
 
 //TEXT
-$font-color: #272626; //Black
+$font-color:rgba(39, 39, 39, 0.7); //Black
 $p-color: #747474; //DarkGrey
 $text-design: #f6f3f3; //light light grey
 $serif-heading: PlayfairDisplay;
@@ -50,6 +50,9 @@ img{
 .wrapper{
     max-width: 1170px;
     margin: 0 auto;
+    @media (max-width: 940px) {
+        width: 96%;
+    }
 }
 ul{
     padding: 0;
@@ -61,6 +64,7 @@ ul{
 }
 a{
     text-decoration: none;
+    transition: all 0.5s;
 }
 img{
     display: inline-block;
