--- a/styles/partials/_button.scss
+++ b/styles/partials/_button.scss
@@ -7,7 +7,7 @@ button{
     font-size: 1.4rem;
     font-style: $sans-text;
     border: 2px solid transparent;
-    transition: all 0.5 ease;
+    transition: all 0.5s ease;
     i{
         color: white;
     }
