--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -4,6 +4,10 @@ footer{
     .wrapper{
         @extend .flex;
         align-items: flex-start;
+        @media (max-width: 480px) {
+            flex-direction: column;
+            justify-content: space-between;
+        }
     }
 }
 .footer-contact{
@@ -14,24 +18,26 @@ footer{
         width: 100%;
         padding: 10px;
         position: relative;
-        bottom: 20px;
+        bottom: 55%;
+        @media (max-width: 480px) {
+            flex-direction: column;
+        }
     }
     .footer-contact-accent{
-        color: $medium-accent;
+        background: $medium-accent;
         width:95%;
         height: 20px;
         margin: 0 auto;
-        // position: relative;
-        // bottom:10px;
+        position: relative;
+        bottom: 55%;  
     }
-    .foot-email{
-        @extend .flex;
-    }
-    .foot-phone{
-        @extend .flex;
-    }
+    .foot-email,
+    .foot-phone,
     .foot-office{
         @extend .flex;
+        img{
+            margin-right: 10px;
+        }
     }
 }
 .footer-co-info{
