--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,12 +1,25 @@
 .half{
     @extend .flex;
     margin-bottom: 20px;
+    @media (max-width: 480px) {
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
 .third{
     width: 32%;
+    @media (max-width: 480px) {
+        width: 90%;
+    }
 }
 .fourth{
     width: 23%;
+    @media (max-width: 940px) {
+        width: 20%;
+    }
+    @media (max-width: 480px) {
+        width: 80%;
+    }
 }
 .projects-img,
 .news-article{
@@ -19,23 +32,29 @@
     background: url(../images/icons/Ellipse-left.png) no-repeat;
     background-size: 157px;
     @media (max-width: 940px) {
-            background-size: 120px;
-            background-position: top left;
-        }
-    h3{
-        margin-bottom: 25px;
+        background-size: 120px;
+        background-position: top left;
     }
     .about-us-stuff{
         @extend .flex;
         align-items: flex-start;
+        @media (max-width: 480px) {
+            flex-direction: column;
+        }
     }
     .co-description{
         flex-basis: 62%;
+        @media (max-width: 480px) {
+            flex-basis: 100%;
+        }
     }
     .co-description button{
         margin-top:100px;
         @media (max-width: 940px) {
             margin-top:92px;
+        }
+        @media (max-width: 768px) {
+            margin: 40px 0;
         }
     }
     .free-consult{
@@ -46,7 +65,10 @@
         position: relative;
         @media (max-width: 940px) {
             flex-basis: 30%;
-            }
+        }
+        @media (max-width: 480px) {
+            flex-basis: 100%;
+        }
         p{
             margin-bottom: 10px;
         }
@@ -87,10 +109,38 @@
     background-position: bottom right;
     background-size: 157px;
     padding: 100px 0;
+    @media (max-width: 480px) {
+        display: flex;
+        flex-direction: row;
+    }
     .third{
         background: white;
-        padding: 30px;
-        min-height: 300px;
+        padding: 50px;
+        min-height: 350px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        @media (max-width: 940px) {
+            padding: 20px;
+        }
+        @media (max-width: 480px) {
+            min-height: 320px;
+            margin-bottom: 30px;
+        }
+        h4{
+            margin: 30px 0;
+        }
+    }
+    .service-icon{
+        @media (max-width: 940px) {
+            width: 40px;
+        }
+    }
+}
+.service-details{
+    @media (max-width: 940px) {
+
     }
 }
 .services-title{
@@ -103,19 +153,8 @@
         color: white;
     }
 }
-.services{
-    .third{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        h4,p{
-            text-align: center;
-        }
-    }
-}
 .rational{
-    margin: 50px;
+    margin: 50px 0;
     .rational-script{
         @extend .flex;
         align-items: flex-start;
@@ -132,9 +171,13 @@
     }
     .rational-image{
         flex-basis: 45%;
+        margin-right: 10px;
     }
     .rationals{
         @extend .flex;
+        @media (max-width: 480px) {
+            flex-direction: column;
+        }
         .third{
             border: 1px solid $bg-color;
             padding: 30px;
@@ -160,6 +203,9 @@
             &:hover h5{
                 color: $primary;
             }
+            @media (max-width: 480px) {
+                margin-bottom: 20px;
+            }
         }
         .rational-title{
            @extend .flex;
@@ -176,12 +222,24 @@
     .outer-wrapper{
         @extend .flex;
         justify-content: space-around; 
+        @media (max-width: 480px) {
+            flex-direction: column;
+        }
     }
     .fourth{
         padding: 50px;
         &:not(:last-child){
             border-right: 1px solid $primary;
         }
+        @media (max-width: 940px) {
+            padding: 10px;
+        }
+        @media (max-width: 480px) {
+            border: none;
+        }
+    }
+    .fourth .icon{
+        width: 30px;
     }
 }
 .projects{
@@ -193,18 +251,30 @@
     .projects-detail{
         @extend .flex;
         margin: 30px 0;
+        @media (max-width: 480px) {
+            flex-direction: column;
+        }
     }
     .projects-detail p{
         @media (max-width: 940px) {
             flex-basis: 80%;
+        }
+        @media (max-width: 480px) {
+            margin: 20px 0;
         }
     }
 }
 .statement{ 
     background: $primary;
     padding: 50px;
+    @media (max-width: 940px) {
+        padding: 50px 10px;
+    }
     .wrapper{
         @extend .flex;
+        @media (max-width: 480px) {
+            flex-direction: column;
+        }
         .statement-img{
             flex-basis: 35%;
         } 
@@ -219,33 +289,57 @@
 }
 .news{
     margin: 100px 0;
-    .news-title{
-        @extend .title-flourish;
-        position: relative;
+}
+.news-title{
+    @extend .title-flourish;
+    position: relative;
+}
+.news-details{
+    @extend .flex;
+    margin-bottom: 80px;
+    @media (max-width: 480px) {
+        flex-direction: column;
     }
-    .news-details{
-        @extend .flex;
-        margin-bottom: 80px;
-        h3{
-            flex-basis: 85%;
-        }
-        button{
-            @extend .transparent;
+    h3{
+        flex-basis: 85%;
+        @media (max-width: 768px) {
+          flex-basis: 80%;  
         }
     }
-    .news-article{
-        .news-img{
-            margin-bottom: 30px;
-        }
-        h3{
+    button{
+        @extend .transparent;
+    }
+}
+.news-article{
+    @media (max-width: 480px) {
+        flex-direction: column;
+        align-items: center;
+    }
+    .news-img{
+        margin-bottom: 30px;
+    }
+    h3{
+        margin-bottom: 20px;
+    }
+    .third{
+        @media (max-width: 480px) {
             margin-bottom: 20px;
         }
     }
-}
+}                                          
 .partners{
      background: $primary;
     .wrapper{
         @extend .flex;
-        padding: 30px;
+        padding: 100px 0;
+        @media (max-width: 480px) {
+            flex-direction: column;
+        }
+        @media (max-width: 480px) {
+            padding: 50px 0;
+        }
+    }
+    .fourth{
+        margin: 20px 0;
     } 
 }
